:bug: Fix minor graphic glitch.
The language-dropdown was overlapping the main nav while animating.

--- a/frontend/scss/components/organisms/header.scss
+++ b/frontend/scss/components/organisms/header.scss
@@ -93,6 +93,7 @@
   &-lnk {
     white-space: nowrap;
     margin: 0 5px;
+    z-index: 2;
 
     @media screen and (min-width: 1024px) {
       margin: 0 20px;
@@ -262,6 +263,7 @@
       display: flex;
       align-items: center;
       cursor: pointer;
+      z-index: 2;
 
       span {
         @include txt-font-accent;
